adding private method to convert to dto